fix overflow

--- a/static/CSS/forum.css
+++ b/static/CSS/forum.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    overflow: hidden;
+    /* overflow: hidden; */
     background-color: var(--eggshell);
     display: flex;
     justify-content: center;
